--- a/_config.melody.yml
+++ b/_config.melody.yml
@@ -17,9 +17,9 @@
 
 # Main menu navigation
 menu:
-  # Home: /
-  # Archives: /archives
-  # Tags: /tags
+  Home: /
+  Archives: /archives
+  Tags: /tags
   # Categories: /categories
   #XXX: /xxx
 
@@ -51,8 +51,8 @@ highlight_theme: default
 # see the icon_name in fontawesome website.
 # And you need to add the `fa` or `fab` prefix by your self.
 # ---------------
-#social:
-#icon_name fa: url
+social:
+  github-square fab: https://github.com/Gavincrz
 #icon_name fab: url
 
 # Algolia search
@@ -118,7 +118,7 @@ scripts:
 cdn:
   css:
     fontawesome: https://cdn.jsdelivr.net/npm/font-awesome@latest/css/font-awesome.min.css
-    # fontawesomeV5: https://use.fontawesome.com/releases/v5.3.1/css/all.css
+    fontawesomeV5: https://use.fontawesome.com/releases/v5.3.1/css/all.css
   js:
     anime: https://cdn.jsdelivr.net/npm/animejs@latest/anime.min.js
     jquery: https://cdn.jsdelivr.net/npm/jquery@latest/dist/jquery.min.js
